tests/snapshots/run_wpt_conformance__litert_where_float16_4D_tensors_all_broadcast_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float16 4D tensors all broadcast 4D, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputCondition: u8[2, 1, 1, 1];
    inputFalseValue: f16[2, 2, 1];
    inputTrueValue: f16[2, 3];
  }

  nodes {
    [whereOutput] = where(inputCondition, inputTrueValue, inputFalseValue, label="");
  }

  outputs { whereOutput; }
}
